--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "tar-js": "^0.3.0",
     "tar-stream": "^3.1.7",
     "vue": "2.6.10",
+    "vue-pdf": "^4.3.0",
     "vue-router": "3.0.6",
+    "vue-video-player": "^5.0.2",
     "vuex": "3.1.0"
   },
   "devDependencies": {
